# openkj-ticker

./: .gitignore  Cargo.toml
src/: config.rs  db.rs  main.rs  server.rs
src/static/: list.html  ticker.html
